@startuml PlaceService
!include ../../style/class.pu
class Geocoding <<interface>> {
  + display_name : String
  + address : AddressType
}

class AddressType <<interface>> {
  + city : String
  + country : String
  + postcode : String
  + road : String
}

class PlaceService {
  - httpClient : HttpClient {readonly}

  --

  + PlaceService(
    private httpClient : HttpClient {readonly}
    private httpClientService : HttpClientService {readonly}
    )
  + reverseGeocoding(
    lat : Real,
    lng : Real
    ) : Observable<Geocoding>
  + getOrgPlaces(organizationId: Integer) : Observable<Place[]>
  + addPlaceToOrg(organizationId: Integer, newPlace: PlaceData) : Observable<boolean>
  + updatePlaceInOrg(organizationId: Integer, newPlace: Place) : Observable<boolean>
  + deletePlaceInOrg(organizationId: Integer, placeId: Integer) : Observable<boolean>
}

Geocoding *--> AddressType
PlaceService ..> Geocoding
@enduml
